
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int address ;
typedef int BYTE ;


 int SetBitmapBits (int ,int,int *) ;
 int * bits ;
 int hManager ;

void SetAddress(BYTE* address) {
 for (int i = 0; i < sizeof(address); i++) {
  bits[0xdf0 + i] = address[i];
 }
 SetBitmapBits(hManager, 0x1000, bits);
}
